Fearute: implement security and open-api-docs